--- a/steady.tex
+++ b/steady.tex
@@ -506,6 +506,7 @@ Two equations were then found for the bootstrap ($I_{BS}$) and driven ($I_{CD}$)
 Combining these three equations and solving for the total plasma current ($I_P$) -- in mega-amps -- yields:
 
 \begin{equation}
+	\label{eq:steady}
 	\tcbhighmath{
 	I_P = \frac{ K_{BS} \, \overline T }{ 1 - K_{CD} ( \sigma v ) }
 	}
