Start adding code chapter

--- a/appb.tex
+++ b/appb.tex
@@ -4,7 +4,7 @@
 
 \begin{figure}
 \vspace{2.4in}
-\caption{Armadillo slaying lawyer.}
+\caption{Armadillo rolling into a ball.}
 \label{arm:fig1}
 \end{figure}
 \clearpage
