--- a/intro.tex
+++ b/intro.tex
@@ -89,7 +89,7 @@ The two most widely used rules of thumb within the fusion design community are: 
 
 The use of the ELMy H-Mode scaling law also brings up another subtlety in the field. To measure the movement of energy within a plasma, scaling relations are needed that correlate to specific modes of plasma behavior -- i.e. ones that can robustly be found by device technicians. Currently, people rank H-Mode scalings over L-Mode (because H stands for high confinement and L stands for low). However, people often seek out other modes that can reliably be found on other machines. These go by names like: I-Mode (i.e. intermediate confinement), Enhanced H-Mode, and Reversed Shear modes. \cite{imode,enhanced,shear}
 
-Without going into too much detail, these alternate modes can be extremely valuable, as they often lead to cheaper reactor designs (than the ones made under H-Mode scaling). The problem, however, is often not finding a better performing mode on a signle machine, but robustly finding it on other ones. This is important, because finding a mode on multiple machines is what allows new scaling relations to be produced and refined. In H-Mode and L-Mode's favor, they have been found on every machine that should see them.
+Without going into too much detail, these alternate modes can be extremely valuable, as they often lead to cheaper reactor designs (than the ones made under H-Mode scaling). The problem, however, is often not finding a better performing mode on a single machine, but robustly finding it on other ones. This is important, because finding a mode on multiple machines is what allows new scaling relations to be produced and refined. In H-Mode and L-Mode's favor, they have been found on every machine that should see them.
 
 \section{Pricing a Fusion Reactor}
 
