--- a/main.tex
+++ b/main.tex
@@ -65,9 +65,7 @@
 \include{steady}
 \include{model}
 \include{pulsed}
-
-%\include{chap1}
-%\include{chap2}
+\include{code}
 
 \appendix
 
@@ -77,4 +75,4 @@
 \include{biblio}
 
 \end{document}
- 
+  
