--- a/model.tex
+++ b/model.tex
@@ -429,6 +429,7 @@ This equation for $B_0$ -- derived from power balance -- is the primary constrai
 Before moving onto the Secondary Constraint, it is worth noting that this power balance equation can be written in a triple product form analogous to the Lawson Criterion. For this reason, we will refer to it as the Freidberg Triple Product:
 
 \begin{equation}
+	\label{eq:freidberg}
 	R_0^{ \alpha_R^* } \cdot B_0^{\,\alpha_B} \cdot I_P^{\,\alpha_I^*} = \frac{ G_{PB} }{ K_{PB} }
 \end{equation}
 
